<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
	
    <LinearLayout
        android:id="@+id/tabNevera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <TextView style="@style/line" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/tabNevera_titulo"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableLeft="@drawable/icon_principal"
                    android:drawablePadding="6dp"
                    android:text="@string/app_name"
                    android:textAppearance="@style/textSize_h0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" >

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteIngredientesNevera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:completionThreshold="1"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/menu_principal_queHayEnLaNevera" />
            </LinearLayout>

            <com.easygourmet.ui.RowLayout
                android:id="@+id/layoutIngredientesElegidosNevera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="8dp" >

                <!--
                     <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawablePadding="3dp"
                    android:drawableRight="@drawable/cross"
                    android:background="#ddd"
                    android:text="Zanahoria"
                    android:textSize="15sp"
                    android:padding="5dp" />
                -->

            </com.easygourmet.ui.RowLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/buttonNevera"
                    style="@style/button_search_easyGourmet"
                    android:text="@string/buttonNevera" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/buttonRecetaDelDia"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/receta_del_dia"
                android:gravity="center"
                android:text="@string/menu_principal_receta_del_dia"
                android:textColor="#111"
                android:textSize="17sp" />

            <LinearLayout
                android:id="@+id/menu_principal_layout_checkboxes"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:orientation="vertical" >

                <CheckBox
                    android:id="@+id/checkBoxVegetariano"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                    android:checked="true"
                    android:text="@string/menu_principal_vegetariano" />

                <CheckBox
                    android:id="@+id/checkBoxVegano"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                    android:checked="true"
                    android:text="@string/menu_principal_vegano" />

                <CheckBox
                    android:id="@+id/checkBoxCeliaco"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                    android:checked="true"
                    android:text="@string/menu_principal_celiaco" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>